Added streamlit UI for debugging & tuning

--- a/Visualizations/Visualizations.ipynb
+++ b/Visualizations/Visualizations.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "1aef0727-bb76-47cd-ba13-04910aa1ece5",
    "metadata": {},
@@ -33,6 +34,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "7519828b-e905-4cd7-89a5-ed01fbb4df2b",
    "metadata": {},
@@ -68,7 +70,7 @@
    "source": [
     "import numpy as np\n",
     "\n",
-    "def vals_from_metric(run_id, key):\n",
+    "def vals_from_metric(client, run_id, key):\n",
     "    metrics = client.get_metric_history(run_id=run_id, key=key)\n",
     "    vals = [m.value for m in metrics]\n",
     "    return np.asarray(vals)"
@@ -93,14 +95,14 @@
    ],
    "source": [
     "# load the relevant data\n",
-    "fc_train = vals_from_metric(run_id, \"train_fc_loss\")\n",
-    "recon_train = vals_from_metric(run_id, \"train_rc_loss\")\n",
+    "fc_train = vals_from_metric(client, run_id, \"train_fc_loss\")\n",
+    "recon_train = vals_from_metric(client, run_id, \"train_rc_loss\")\n",
     "\n",
-    "fc_val = vals_from_metric(run_id, \"val_fc_loss\")\n",
-    "recon_val = vals_from_metric(run_id, \"val_rc_loss\")\n",
+    "fc_val = vals_from_metric(client, run_id, \"val_fc_loss\")\n",
+    "recon_val = vals_from_metric(client, run_id, \"val_rc_loss\")\n",
     "\n",
-    "tot_train = vals_from_metric(run_id, \"total_train_loss\")\n",
-    "tot_val = vals_from_metric(run_id, \"total_val_loss\")\n",
+    "tot_train = vals_from_metric(client, run_id, \"total_train_loss\")\n",
+    "tot_val = vals_from_metric(client, run_id, \"total_val_loss\")\n",
     "\n",
     "epochs = list(range(1,fc_train.shape[0]+1))\n",
     "\n",
@@ -140,6 +142,7 @@
    "source": []
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "64055ed6-b3b7-4482-8683-4f0256c6cf75",
    "metadata": {
@@ -159,7 +162,6 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "import json\n",
     "from utils import json_to_numpy, PA, anoms_to_indices, create_anom_range\n",
     "\n",
     "# Load scores\n",
@@ -310,6 +312,7 @@
    "source": []
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "0b2061ac-01a4-4554-9e9b-c0d67e34a796",
    "metadata": {},
@@ -360,7 +363,7 @@
     "    # plot ground truth anomalies\n",
     "    ct = 0\n",
     "    for (a, b) in anoms:\n",
-    "        if a >= start and b <= end:\n",
+    "        if a >= start and (end is None or b <= end):\n",
     "            if ct==0:\n",
     "                axes[0].axvspan(a, b, facecolor=cust_cols['anoms'], alpha=0.2, label='Anomalies')\n",
     "                ct += 1\n",
