fixes for score() method

--- a/predict.ipynb
+++ b/predict.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
@@ -19,6 +20,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
@@ -38,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -69,6 +71,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
@@ -88,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -103,7 +106,6 @@
    },
    "outputs": [
     {
-     "output_type": "display_data",
      "data": {
       "application/vnd.databricks.v1+bamboolib_hint": "{\"pd.DataFrames\": [], \"version\": \"0.0.1\"}",
       "text/plain": []
@@ -128,6 +130,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
@@ -147,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -175,6 +178,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
@@ -194,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -209,7 +213,6 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -251,6 +254,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
@@ -270,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -285,15 +289,17 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "No model found in Production stage, using model from latest run for predictions.\nThe model's run ID is: 0dac450f8b2d4e5294070621318ae72b\nPredicting:\nThe size of the dataset is: 989 sample(s).\nCalculating scores on new data...\n"
+      "No model found in Production stage, using model from latest run for predictions.\n",
+      "The model's run ID is: 0dac450f8b2d4e5294070621318ae72b\n",
+      "Predicting:\n",
+      "The size of the dataset is: 989 sample(s).\n",
+      "Calculating scores on new data...\n"
      ]
     },
     {
-     "output_type": "stream",
      "name": "stderr",
      "output_type": "stream",
      "text": [
@@ -301,15 +307,21 @@
      ]
     },
     {
-     "output_type": "stream",
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading scores from data used for training...\nRunning POT with q=0.001, level=0.99..\nInitial threshold : 0.7201882004737854\nNumber of peaks : 283\nGrimshaw maximum log-likelihood estimation ... [done]\n\tγ = -0.016250451967990354\n\tσ = 0.2116042329432291\n\tL = 161.10851155849537\nExtreme quantile (probability = 0.001): 1.197853647367851\n"
+      "Loading scores from data used for training...\n",
+      "Running POT with q=0.001, level=0.99..\n",
+      "Initial threshold : 0.7201882004737854\n",
+      "Number of peaks : 283\n",
+      "Grimshaw maximum log-likelihood estimation ... [done]\n",
+      "\tγ = -0.016250451967990354\n",
+      "\tσ = 0.2116042329432291\n",
+      "\tL = 161.10851155849537\n",
+      "Extreme quantile (probability = 0.001): 1.197853647367851\n"
      ]
     },
     {
-     "output_type": "stream",
      "name": "stderr",
      "output_type": "stream",
      "text": [
@@ -317,11 +329,11 @@
      ]
     },
     {
-     "output_type": "stream",
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Predicting anomalies based on POT-generated threshold - threshold value: 1.1978536473678507\nFinished.\n"
+      "Predicting anomalies based on POT-generated threshold - threshold value: 1.1978536473678507\n",
+      "Finished.\n"
      ]
     }
    ],
@@ -400,7 +412,7 @@
     "\n",
     "    # Get new scores (inference needs to be fast, no details needed)\n",
     "    print(\"Calculating scores on new data...\")\n",
-    "    new_scores = handler.score(loader=new_loader, details=False)\n",
+    "    new_scores, _ = handler.score(loader=new_loader, details=False)\n",
     "\n",
     "    # Calculate threshold via POT based on the new_scores\n",
     "    if threshold_type == \"POT\":\n",
@@ -443,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -520,129 +532,132 @@
      "currentValue": "system_1",
      "nuid": "e9c16260-e768-45d7-aa37-19a5928486ac",
      "widgetInfo": {
-      "widgetType": "text",
       "defaultValue": "system_1",
       "label": null,
       "name": "dataset",
       "options": {
-       "widgetType": "text",
-       "validationRegex": null
-      }
+       "validationRegex": null,
+       "widgetType": "text"
+      },
+      "widgetType": "text"
      }
     },
     "dynamic_pot": {
      "currentValue": "False",
      "nuid": "e86196cb-56e2-444a-b17b-bf31f45bb663",
      "widgetInfo": {
-      "widgetType": "text",
       "defaultValue": "False",
       "label": null,
       "name": "dynamic_pot",
       "options": {
-       "widgetType": "text",
-       "validationRegex": null
-      }
+       "validationRegex": null,
+       "widgetType": "text"
+      },
+      "widgetType": "text"
      }
     },
     "eval_end": {
      "currentValue": "None",
      "nuid": "a2479a96-fc93-4998-93b8-0e6181f99593",
      "widgetInfo": {
-      "widgetType": "text",
       "defaultValue": "None",
       "label": null,
       "name": "eval_end",
       "options": {
-       "widgetType": "text",
-       "validationRegex": null
-      }
+       "validationRegex": null,
+       "widgetType": "text"
+      },
+      "widgetType": "text"
      }
     },
     "eval_start": {
      "currentValue": "0",
      "nuid": "0c15166c-a7a5-46af-86b9-496340d04a65",
      "widgetInfo": {
-      "widgetType": "text",
       "defaultValue": "0",
       "label": null,
       "name": "eval_start",
       "options": {
-       "widgetType": "text",
-       "validationRegex": null
-      }
+       "validationRegex": null,
+       "widgetType": "text"
+      },
+      "widgetType": "text"
      }
     },
     "level": {
      "currentValue": "0.99",
      "nuid": "1a5279bb-c589-4aaa-b0d3-76372b9585e1",
      "widgetInfo": {
-      "widgetType": "text",
       "defaultValue": "0.99",
       "label": null,
       "name": "level",
       "options": {
-       "widgetType": "text",
-       "validationRegex": null
-      }
+       "validationRegex": null,
+       "widgetType": "text"
+      },
+      "widgetType": "text"
      }
     },
     "q": {
      "currentValue": "0.001",
      "nuid": "2dfe5c38-8a7a-4394-b058-b5d5c5697358",
      "widgetInfo": {
-      "widgetType": "text",
       "defaultValue": "0.001",
       "label": null,
       "name": "q",
       "options": {
-       "widgetType": "text",
-       "validationRegex": null
-      }
+       "validationRegex": null,
+       "widgetType": "text"
+      },
+      "widgetType": "text"
      }
     },
     "threshold_type": {
      "currentValue": "POT",
      "nuid": "1dbf1e3c-0c55-43a2-b131-8be0f6cba5ef",
      "widgetInfo": {
-      "widgetType": "text",
       "defaultValue": "POT",
       "label": null,
       "name": "threshold_type",
       "options": {
-       "widgetType": "text",
-       "validationRegex": null
-      }
+       "validationRegex": null,
+       "widgetType": "text"
+      },
+      "widgetType": "text"
      }
     },
     "use_cuda": {
      "currentValue": "True",
      "nuid": "2db40dde-c4af-40b6-b117-078f01b31e33",
      "widgetInfo": {
-      "widgetType": "text",
       "defaultValue": "True",
       "label": null,
       "name": "use_cuda",
       "options": {
-       "widgetType": "text",
-       "validationRegex": null
-      }
+       "validationRegex": null,
+       "widgetType": "text"
+      },
+      "widgetType": "text"
      }
     },
     "use_mov_av": {
      "currentValue": "False",
      "nuid": "3b1b7c23-0d62-4839-b365-8cecd9f54f54",
      "widgetInfo": {
-      "widgetType": "text",
       "defaultValue": "False",
       "label": null,
       "name": "use_mov_av",
       "options": {
-       "widgetType": "text",
-       "validationRegex": null
-      }
+       "validationRegex": null,
+       "widgetType": "text"
+      },
+      "widgetType": "text"
      }
     }
    }
+  },
+  "language_info": {
+   "name": "python"
   }
  },
  "nbformat": 4,
